videobox: fix border filling for planar YUV formats

We would get a green border instead of a black one, for
example.

https://bugzilla.gnome.org/show_bug.cgi?id=684991